test/cli/test-validating-admission-policy/with-namespaceObject-1/policy.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "check-deployment-namespace"
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:
      - apps
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - deployments
  validations:
  - expression: "namespaceObject.metadata.name != 'default'"
    message: "Using 'default' namespace is not allowed for pod controllers."
