test/cli/test-validating-admission-policy/with-namespaceObject-1/values.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Value
metadata:
  name: values
namespaceSelector:
- labels:
    environment: staging
  name: staging
- labels:
    environment: default
  name: default
